Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • xserver xserver
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributor statistics
    • Graph
    • Compare revisions
  • Issues 944
    • Issues 944
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 132
    • Merge requests 132
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Artifacts
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
    • Model experiments
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar

Admin message

Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.

  • xorgxorg
  • xserverxserver
  • Issues
  • #1288

Xwayland uses glamor and shows black screens

Package: xwayland Version: 2:21.1.4-1

I am using graphics:

00:00.0 Host bridge: Intel Corporation Mobile 945GM/PM/GMS, 943/940GML and
945GT Express Memory Controller Hub (rev 03)
        Subsystem: Dell Mobile 945GM/PM/GMS, 943/940GML and 945GT Express
Memory Controller Hub
00:02.0 VGA compatible controller: Intel Corporation Mobile 945GM/GMS,
943/940GML Express Integrated Graphics Controller (rev 03)
        Subsystem: Dell Mobile 945GM/GMS, 943/940GML Express Integrated
Graphics Controller
        Kernel driver in use: i915
        Kernel modules: i915
00:02.1 Display controller: Intel Corporation Mobile 945GM/GMS/GME, 943/940GML
Express Integrated Graphics Controller (rev 03)
        Subsystem: Dell Mobile 945GM/GMS/GME, 943/940GML Express Integrated
Graphics Controller

It is intel gen 3 and supports GL1.4 and ES2.0.

At Debian (testing) Bookworm this recently was working without problem, using ES2.0 hardware driver at Wayland. At Xwayland automatically glamor was disabled and the llvmpipe software driver was selected, because version GL1.4 is too low.

The latest Xwayland package now tries to use ES2.0 with glamor at Xwayland. This causes blackscreen (Java8, Chromium, xeyes) and failing es2_info end glxinfo.

Errors at startup of user session at syslog:

Jan  2 01:27:47 debian org.gnome.Shell.desktop[9925]: Supported GL version is not sufficient (required 21, found 14)

Jan  2 01:27:47 debian org.gnome.Shell.desktop[9925]: (EE) glamor0: GL error: GL_INVALID_VALUE in glTexImage2D(internalFormat=GL_R8)

Jan  2 01:27:47 debian org.gnome.Shell.desktop[9925]: (EE)
Jan  2 01:27:47 debian org.gnome.Shell.desktop[9925]: (EE) Backtrace:
Jan  2 01:27:47 debian dbus-daemon[528]: [system] Activating via systemd: service name='org.freedesktop.realmd' unit='realmd.service' requested by ':1.492' (uid=117 pid=9895 comm="/usr/bin/gnome-shell ")
Jan  2 01:27:47 debian systemd[1]: Starting Realm and Domain Configuration...
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 0: /usr/bin/Xwayland (0x4b9000+0x161813) [0x61a813]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 1: /usr/bin/Xwayland (0x4b9000+0x31596) [0x4ea596]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 2: /usr/lib/i386-linux-gnu/dri/i915_dri.so (0xb61c4000+0x1f6175) [0xb63ba175]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 3: /usr/lib/i386-linux-gnu/dri/i915_dri.so (0xb61c4000+0x25d5f1) [0xb64215f1]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 4: /usr/lib/i386-linux-gnu/dri/i915_dri.so (0xb61c4000+0x31f955) [0xb64e3955]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 5: /usr/lib/i386-linux-gnu/dri/i915_dri.so (0xb61c4000+0x320076) [0xb64e4076]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 6: /usr/lib/i386-linux-gnu/dri/i915_dri.so (0xb61c4000+0x3225fa) [0xb64e65fa]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 7: /usr/bin/Xwayland (0x4b9000+0x31758) [0x4ea758]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 8: /usr/bin/Xwayland (0x4b9000+0x32d27) [0x4ebd27]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 9: /usr/bin/Xwayland (0x4b9000+0x2b3cc) [0x4e43cc]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 10: /usr/bin/Xwayland (0x4b9000+0x25eac) [0x4deeac]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 11: /usr/bin/Xwayland (0x4b9000+0x8f759) [0x548759]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 12: /usr/bin/Xwayland (0x4b9000+0x1f584) [0x4d8584]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 13: /usr/bin/Xwayland (0x4b9000+0x93715) [0x54c715]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 14: /usr/bin/Xwayland (0x4b9000+0x1ed3b) [0x4d7d3b]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 15: /lib/i386-linux-gnu/libc.so.6 (__libc_start_main+0xe5) [0xb7942905]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 16: /usr/bin/Xwayland (0x4b9000+0x1ed81) [0x4d7d81]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE)
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: glamor: Test fbo for depth 8 incomplete.  Falling back to software.

Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: glamor: Implementation returned 0x1908/0x8366 read format/type for depth 15, expected 0x1908/0x8034.
Falling back to software.

Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: glamor: Implementation returned 0x80e1/0x1401 read format/type for depth 24, expected 0x1908/0x1401.
Falling back to software.

Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: glamor: Implementation returned 0x80e1/0x1401 read format/type for depth 32, expected 0x1908/0x1401.
Falling back to software.

Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) glamor0: GL error: GL_INVALID_OPERATION in glTexImage2D(format = GL_RGBA, type = GL_UNSIGNED_INT_2_10_10_10_REV, internalformat = GL_RGB10_A2)

Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE)
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) Backtrace:
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 0: /usr/bin/Xwayland (0x4b9000+0x161813) [0x61a813]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 1: /usr/bin/Xwayland (0x4b9000+0x31596) [0x4ea596]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 2: /usr/lib/i386-linux-gnu/dri/i915_dri.so (0xb61c4000+0x1f6175) [0xb63ba175]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 3: /usr/lib/i386-linux-gnu/dri/i915_dri.so (0xb61c4000+0x25d5f1) [0xb64215f1]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 4: /usr/lib/i386-linux-gnu/dri/i915_dri.so (0xb61c4000+0x31a75e) [0xb64de75e]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 5: /usr/lib/i386-linux-gnu/dri/i915_dri.so (0xb61c4000+0x31fc18) [0xb64e3c18]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 6: /usr/lib/i386-linux-gnu/dri/i915_dri.so (0xb61c4000+0x320076) [0xb64e4076]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 7: /usr/lib/i386-linux-gnu/dri/i915_dri.so (0xb61c4000+0x3225fa) [0xb64e65fa]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 8: /usr/bin/Xwayland (0x4b9000+0x31758) [0x4ea758]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 9: /usr/bin/Xwayland (0x4b9000+0x32dfe) [0x4ebdfe]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 10: /usr/bin/Xwayland (0x4b9000+0x2b3cc) [0x4e43cc]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 11: /usr/bin/Xwayland (0x4b9000+0x25eac) [0x4deeac]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 12: /usr/bin/Xwayland (0x4b9000+0x8f759) [0x548759]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 13: /usr/bin/Xwayland (0x4b9000+0x1f584) [0x4d8584]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 14: /usr/bin/Xwayland (0x4b9000+0x93715) [0x54c715]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 15: /usr/bin/Xwayland (0x4b9000+0x1ed3b) [0x4d7d3b]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 16: /lib/i386-linux-gnu/libc.so.6 (__libc_start_main+0xe5) [0xb7942905]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE) 17: /usr/bin/Xwayland (0x4b9000+0x1ed81) [0x4d7d81]
Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: (EE)

Jan  2 01:27:48 debian org.gnome.Shell.desktop[9925]: glamor: Test fbo for depth 30 incomplete.  Falling back to software.

Problem disappears by using environment variable: XWAYLAND_NO_GLAMOR=1

I reported this bug also at Debian (testing): https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1003091

-- System Information:
Debian Release: bookworm/sid
  APT prefers testing
  APT policy: (500, 'testing')
Architecture: i386 (i686)

Kernel: Linux 5.15.0-2-686-pae (SMP w/2 CPU threads)
Locale: LANG=en_US.UTF-8, LC_CTYPE=en_US.UTF-8 (charmap=UTF-8), LANGUAGE=en_US:en
Shell: /bin/sh linked to /usr/bin/dash
Init: systemd (via /run/systemd/system)
LSM: AppArmor: enabled

Versions of packages xwayland depends on:
ii  libc6               2.33-1
ii  libdrm2             2.4.109-2
ii  libepoxy0           1.5.9-2
ii  libgbm1             21.2.6-1
ii  libgcrypt20         1.9.4-5
ii  libgl1              1.3.4-2+b1
ii  libpixman-1-0       0.40.0-1
ii  libtirpc3           1.3.2-2
ii  libwayland-client0  1.19.0-2+b1
ii  libxau6             1:1.0.9-1
ii  libxdmcp6           1:1.1.2-3
ii  libxfont2           1:2.0.5-1
ii  libxshmfence1       1.3-1
ii  xserver-common      2:1.20.13-3

Program glxinfo hangs after displaying "name of display: :0" .

Program es2_info shows info with version before failing:

GL_VERSION: OpenGL ES 2.0 Mesa 21.2.6

GL_RENDERER: Mesa DRI Intel(R) 945GM x86/MMX/SSE2

Programs es2_info, glxgears and es2gears fail with error:

X Error of failed request:  BadAlloc (insufficient resources for operation)

  Major opcode of failed request:  146 ()
  Minor opcode of failed request:  2
  Serial number of failed request:  40
  Current serial number in output stream:  42

Using GLAMOR_DEBUG=3 . All these programs show at the log:

Jan  9 12:01:10 debian org.gnome.Shell.desktop[13597]:          glamor_pixmap_ensure_fb:#011glamor: Failed to create fbo, incomplete attachment

Jan  9 12:01:10 debian org.gnome.Shell.desktop[13597]: XXX fail to create fbo.

It is strange that Xwayland now is trying to use glamor. According to issue #1004 (closed) , which describes similar errors, this is impossible because dri3 is not supported for gen 3 ?

Edited Jan 17, 2022 by Michel Dänzer
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking