xwayland/glamor: Do not fallback to GLES2 if GL is unusable

Since commit dabc7d8b, Xwayland has tried GLES2 as a fallback if GL
version does not match the required version (2.1) so that some hardware
could still benefit from GLAMOR acceleration using GLES2.

This unfortunately has caused various regressions on some hardware,
namely Intel 945GM.

Revert that fallback to just disable GLAMOR if GL version is lower than
2.1 to behave like xwayland-21.1.x did.

This partly reverts commit dabc7d8bf2d964460286168b52899c42b3369f8d

Signed-off-by: Olivier Fourdan <ofourdan@redhat.com>
See-also: https://gitlab.freedesktop.org/xorg/xserver/-/issues/1288